--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
         "barryvdh/laravel-debugbar": "2.4",
         "erusev/parsedown-extra": " ~0.7.1",
         "fideloper/proxy": "~3.3",
+        "intervention/image": "2.3.*",
+        "laracasts/flash": "^3.0",
         "laravel/framework": "5.5.*",
+        "laravel/socialite": "2.0.*",
         "laravel/tinker": "~1.0"
     },
     "require-dev": {
