--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     },
     "devDependencies": {
         "axios": "^0.17",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-register": "^6.26.0",
         "bootstrap-sass": "^3.3.7",
         "cross-env": "^5.1",
         "dropzone": "^5.4.0",
@@ -22,6 +24,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
-        "gulp": "^3.9.1"
+        "gulp": "^3.9.1",
+        "yarn": "^1.5.1"
     }
 }
